--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         <div class="about">
           <h2 class="about-position">Front-End Developer</h2>
 
-          <h1 class="about-name">Maksym Gromov</h1>
+          <h1 class="about-name">Maksym Hromov</h1>
 
           <p class="about-description">
             I am a Front-End developer. I focus on HTML, CSS, JavaScript and am
             constantly expanding my knowledge in this area. I have experience
-            with SASS preprocessor and BEM methodology.
+            with HTML, CSS, SASS preprocessor, Java Script and BEM methodology.
           </p>
         </div>
 
@@ -43,7 +43,7 @@
                   >https://maksym82.github.io/goit-markup-hw-08/</a
                 >
                 WebStudio
-                <span class="project-bracket">[</span> HTML5, CSS3
+                <span class="project-bracket">[</span> HTML5, CSS3, Java Script
                 <span class="project-bracket">]</span>
               </span>
             </li>
@@ -155,14 +155,14 @@
           <div>
             <p>
               <span class="contact-type">C:</span>
-              <a href="tel:+11111111111" class="contact-link"
-                >+1 111 111 11 11</a
+              <a href="tel:+380507662945" class="contact-link"
+                >+38 050 766 2945</a
               >
             </p>
             <p>
               <span class="contact-type">E:</span>
-              <a href="mailto:chornyiav@gmail.com" class="contact-link"
-                >chornyiav@gmail.com</a
+              <a href="mailto:maksym.gromov82@gmail.com" class="contact-link"
+                >maksym.gromov82@gmail.com</a
               >
             </p>
           </div>
