--- a/index.html
+++ b/index.html
@@ -39,31 +39,41 @@
           <ol class="projects-list">
             <li class="projects-item">
               <span class="project">
-                <a href="https://maksym82.github.io/goit-markup-hw-08/" target="_blank" class="project-link"
-                  >https://maksym82.github.io/goit-markup-hw-08/</a
+                <a href="https://maksym82.github.io/goit-markup-hw-08/" target="_blank" rel="noopener noreferrer" class="project-link"
+                  >WebStudio</a
                 >
-                WebStudio
+                ............
                 <span class="project-bracket">[</span> HTML5, CSS3, Java Script
                 <span class="project-bracket">]</span>
               </span>
             </li>
             <li class="projects-item">
               <span class="project">
-                <a href="https://cryptohub.goit.global/" class="project-link"
-                  >https://cryptohub.goit.global/</a
+                <a href="https://maksym82.github.io/Barbershop/" class="project-link" target="_blank" rel="noopener noreferrer"
+                  >Barbershop</a
                 >
                 ...........
-                <span class="project-bracket">[</span> JavaScript
+                <span class="project-bracket">[</span> HTML5, CSS3, Java Script
                 <span class="project-bracket">]</span>
               </span>
             </li>
             <li class="projects-item">
               <span class="project">
-                <a href="https://kidslike.goit.global/" class="project-link"
-                  >https://kidslike.goit.global/</a
+                <a href="https://maksym82.github.io/Minimal/" class="project-link" target="_blank" rel="noopener noreferrer"
+                  >Minimal</a
                 >
-                ..................
-                <span class="project-bracket">[</span> React.js, Node.js
+                ....................
+                <span class="project-bracket">[</span> HTML5, CSS3, Java Script
+                <span class="project-bracket">]</span>
+              </span>
+            </li>
+            <li class="projects-item">
+              <span class="project">
+                <a href="https://maksym82.github.io/Anemone/" class="project-link" target="_blank" rel="noopener noreferrer"
+                  >Anemone</a
+                >
+                ................
+                <span class="project-bracket">[</span> HTML5, CSS3, Java Script
                 <span class="project-bracket">]</span>
               </span>
             </li>
