--- a/index.html
+++ b/index.html
@@ -39,17 +39,26 @@
           <ol class="projects-list">
             <li class="projects-item">
               <span class="project">
-                <a href="https://maksym82.github.io/goit-markup-hw-08/" target="_blank" rel="noopener noreferrer" class="project-link"
+                <a
+                  href="https://maksym82.github.io/goit-markup-hw-08/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="project-link"
                   >WebStudio</a
                 >
                 ............
-                <span class="project-bracket">[</span> HTML5, CSS3, Java Script
+                <span class="project-bracket">[</span> HTML5, CSS3, Java Script,
+                BEM
                 <span class="project-bracket">]</span>
               </span>
             </li>
             <li class="projects-item">
               <span class="project">
-                <a href="https://maksym82.github.io/Barbershop/" class="project-link" target="_blank" rel="noopener noreferrer"
+                <a
+                  href="https://maksym82.github.io/Barbershop/"
+                  class="project-link"
+                  target="_blank"
+                  rel="noopener noreferrer"
                   >Barbershop</a
                 >
                 ...........
@@ -59,21 +68,31 @@
             </li>
             <li class="projects-item">
               <span class="project">
-                <a href="https://maksym82.github.io/Minimal/" class="project-link" target="_blank" rel="noopener noreferrer"
+                <a
+                  href="https://maksym82.github.io/Minimal/"
+                  class="project-link"
+                  target="_blank"
+                  rel="noopener noreferrer"
                   >Minimal</a
                 >
                 ....................
-                <span class="project-bracket">[</span> HTML5, CSS3, Java Script
+                <span class="project-bracket">[</span> HTML5, CSS3, Java Script,
+                BEM
                 <span class="project-bracket">]</span>
               </span>
             </li>
             <li class="projects-item">
               <span class="project">
-                <a href="https://maksym82.github.io/Anemone/" class="project-link" target="_blank" rel="noopener noreferrer"
+                <a
+                  href="https://maksym82.github.io/Anemone/"
+                  class="project-link"
+                  target="_blank"
+                  rel="noopener noreferrer"
                   >Anemone</a
                 >
                 ................
-                <span class="project-bracket">[</span> HTML5, CSS3, Java Script
+                <span class="project-bracket">[</span> HTML5, CSS3, Java Script,
+                BEM
                 <span class="project-bracket">]</span>
               </span>
             </li>
@@ -188,19 +207,16 @@
               <span class="tech-skills-text">CSS3</span>
             </li>
             <li class="tech-skills-item">
-              <span class="tech-skills-text">GIT</span>
+              <span class="tech-skills-text">JavaScript</span>
             </li>
             <li class="tech-skills-item">
               <span class="tech-skills-text">WebPack</span>
             </li>
             <li class="tech-skills-item">
-              <span class="tech-skills-text">JavaScript</span>
+              <span class="tech-skills-text">GIT/Github</span>
             </li>
             <li class="tech-skills-item">
               <span class="tech-skills-text">React.js</span>
-            </li>
-            <li class="tech-skills-item">
-              <span class="tech-skills-text">Node.js</span>
             </li>
           </ul>
         </div>
