--- a/index.html
+++ b/index.html
@@ -167,11 +167,11 @@
         <div class="education">
           <h3 class="education-title">Education</h3>
           <h4 class="education-name">
-            National University of Radioelectronics
+            Mykolaiv National Agrarian University
           </h4>
-          <h4 class="faculty">Management</h4>
+          <h4 class="faculty">Master's degree field of study "Accounting and audit"</h4>
           <p class="education-period">
-            September 2009 - June 2014 <span class="line">|</span> Country
+            September 2011 - June 2015 <span class="line">|</span> 
           </p>
         </div>
       </div>
