--- a/index.html
+++ b/index.html
@@ -105,74 +105,54 @@
           <!--Company 1-->
           <div>
             <h4 class="work-position">
-              Front-End Developer <span class="organization">Freelance</span>
+              Area sales manager
+              <span class="organization">Fomalgaut-Polimin</span>
             </h4>
             <p class="period">
-              September 2019 - up to now <span class="line">|</span> Country
+              May 2021 - December 2021<span class="line"></span>
             </p>
             <ul class="work-list">
               <li class="work-list-item">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Organization and development of the distribution system in the
+                region.
               </li>
               <li class="work-list-item">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-              </li>
-              <li class="work-list-item">Risus commodo viverra maecenas.</li>
-              <li class="work-list-item">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod.
-              </li>
-            </ul>
-          </div>
-          <!--Company 2-->
-          <div>
-            <h4 class="work-position">
-              Manager <span class="organization"> Roga & Kopyta New</span>
-            </h4>
-            <p class="period">
-              March 2015 - October 2018 <span class="line">|</span> Country
-            </p>
-            <ul class="work-list">
-              <li class="work-list-item">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod labore et dolore magna aliqua.
+                Search for new clients and partners.
               </li>
               <li class="work-list-item">
-                Quis ipsum suspendisse ultrices gravida.
-              </li>
-              <li class="work-list-item">Risus commodo viverra maecenas.</li>
-            </ul>
-          </div>
-          <!--Company 3-->
-          <div>
-            <h4 class="work-position">
-              Manager <span class="organization">Roga & Kopyta LLC</span>
-            </h4>
-            <p class="period">
-              June 2014 - February 2015 <span class="line">|</span> Country
-            </p>
-            <ul class="work-list">
-              <li class="work-list-item">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Building and maintaining effective partnerships with clients.
               </li>
               <li class="work-list-item">
-                Quis ipsum suspendisse ultrices gravida.
+                Cooperation with distributor's sales agents.
               </li>
-              <li class="work-list-item">Risus commodo viverra maecenas.</li>
             </ul>
           </div>
         </div>
         <!--Education-->
         <div class="education">
-          <h3 class="education-title">Education</h3>
-          <h4 class="education-name">
-            Mykolaiv National Agrarian University
-          </h4>
-          <h4 class="faculty">Master's degree field of study "Accounting and audit"</h4>
-          <p class="education-period">
-            September 2011 - June 2015 <span class="line">|</span> 
-          </p>
+          <div>
+            <h3 class="education-title">Education</h3>
+            <h4 class="education-name">
+              Mykolaiv National Agrarian University
+            </h4>
+            <h4 class="faculty">
+              Master's degree field of study "Accounting and audit"
+            </h4>
+            <p class="education-period">
+              September 2011 - June 2015 <span class="line"></span>
+            </p>
+          </div>
+          <div>
+            <h4 class="education-name">
+              IT School GoIT
+            </h4>
+            <h4 class="faculty">
+              Fullstack developer
+            </h4>
+            <p class="education-period">
+              January 2023 - November 2023 <span class="line"></span>
+            </p>
+          </div>
         </div>
       </div>
       <!--Sidebar-->
