--- a/index.html
+++ b/index.html
@@ -143,15 +143,17 @@
             </p>
           </div>
           <div>
-            <h4 class="education-name">
-              IT School GoIT
-            </h4>
-            <h4 class="faculty">
-              Fullstack developer
-            </h4>
+            <h4 class="education-name">ITVDN</h4>
+            <h4 class="faculty">React Essential</h4>
+            <p class="education-period">April 2024<span class="line"></span></p>
+          </div>
+          <div>
+            <h4 class="education-name">IT School GoIT</h4>
+            <h4 class="faculty">Fullstack developer</h4>
             <p class="education-period">
               January 2023 - November 2023 <span class="line"></span>
             </p>
+            <a class="certificate" href="https://drive.google.com/file/d/12S_EI7MebRKOQ7qcamDVQEOoFziC1EQ0/view?usp=sharing" target="_blank" rel="noopener noreferrer">Certificate</a>
           </div>
         </div>
       </div>
