--- a/index.html
+++ b/index.html
@@ -142,17 +142,41 @@
               September 2011 - June 2015 <span class="line"></span>
             </p>
           </div>
-           <div>
+          <div>
+            <h4 class="education-name">ITVDN</h4>
+            <h4 class="faculty">Layout of pages using Grid</h4>
+            <p class="education-period">May 2024<span class="line"></span></p>
+            <a
+              class="certificate"
+              href="https://drive.google.com/file/d/1lwAUqSEmjP1ZkG1I0gROzHwBDqJdfbqA/view?usp=drive_link"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Certificate</a
+            >
+          </div>
+          <div>
             <h4 class="education-name">ITVDN</h4>
             <h4 class="faculty">Asynchronous programming in JavaScript</h4>
             <p class="education-period">April 2024<span class="line"></span></p>
-            <a class="certificate" href="https://drive.google.com/file/d/1i9FQaP6CTuOc9NJ5mViGl38uCpGc_le0/view?usp=sharing" target="_blank" rel="noopener noreferrer">Certificate</a>
+            <a
+              class="certificate"
+              href="https://drive.google.com/file/d/1i9FQaP6CTuOc9NJ5mViGl38uCpGc_le0/view?usp=sharing"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Certificate</a
+            >
           </div>
           <div>
             <h4 class="education-name">ITVDN</h4>
             <h4 class="faculty">React Essential</h4>
             <p class="education-period">April 2024<span class="line"></span></p>
-            <a class="certificate" href="https://drive.google.com/file/d/1Kxk2Z2qSUo8AaFTyUqrM4GQgqv6KD_VT/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Certificate</a>
+            <a
+              class="certificate"
+              href="https://drive.google.com/file/d/1Kxk2Z2qSUo8AaFTyUqrM4GQgqv6KD_VT/view?usp=drive_link"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Certificate</a
+            >
           </div>
           <div>
             <h4 class="education-name">IT School GoIT</h4>
@@ -160,7 +184,13 @@
             <p class="education-period">
               January 2023 - November 2023 <span class="line"></span>
             </p>
-            <a class="certificate" href="https://drive.google.com/file/d/12S_EI7MebRKOQ7qcamDVQEOoFziC1EQ0/view?usp=sharing" target="_blank" rel="noopener noreferrer">Certificate</a>
+            <a
+              class="certificate"
+              href="https://drive.google.com/file/d/12S_EI7MebRKOQ7qcamDVQEOoFziC1EQ0/view?usp=sharing"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Certificate</a
+            >
           </div>
         </div>
       </div>
