--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
               <span class="soft-skills-text">Agile</span>
             </li>
             <li class="soft-skills-item">
-              <span class="soft-skills-text">GTD</span>
+              <span class="soft-skills-text">Communicative</span>
             </li>
             <li class="soft-skills-item">
               <span class="soft-skills-text">Teamwork</span>
