--- a/index.html
+++ b/index.html
@@ -244,10 +244,10 @@
           <h3 class="sidebar-title">Soft Skills</h3>
           <ul class="soft-skills-list">
             <li class="soft-skills-item">
-              <span class="soft-skills-text">Scrum</span>
+              <span class="soft-skills-text">Creativity</span>
             </li>
             <li class="soft-skills-item">
-              <span class="soft-skills-text">Agile</span>
+              <span class="soft-skills-text">Attention to detail</span>
             </li>
             <li class="soft-skills-item">
               <span class="soft-skills-text">Communicative</span>
