--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
       </div>
       <!--Sidebar-->
       <aside class="sidebar">
-        <img src="img/photo.jpg" alt="user foto" class="photo" />
+        <img src="./img/photo_2024.jpg" alt="user foto" class="photo" />
         <!--Contacts-->
         <div class="contacts">
           <h3 class="sidebar-title">Contacts</h3>
