--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                   class="project-link"
                   >WebStudio</a
                 >
-                ............
+                ...................................
                 <span class="project-bracket">[</span> HTML5, CSS3, Java Script,
                 BEM
                 <span class="project-bracket">]</span>
@@ -61,7 +61,7 @@
                   rel="noopener noreferrer"
                   >Barbershop</a
                 >
-                ...........
+                ..................................
                 <span class="project-bracket">[</span> HTML5, CSS3, Java Script
                 <span class="project-bracket">]</span>
               </span>
@@ -75,7 +75,7 @@
                   rel="noopener noreferrer"
                   >Minimal</a
                 >
-                ....................
+                ...........................................
                 <span class="project-bracket">[</span> HTML5, CSS3, Java Script,
                 BEM
                 <span class="project-bracket">]</span>
@@ -89,6 +89,21 @@
                   target="_blank"
                   rel="noopener noreferrer"
                   >Anemone</a
+                >
+                .......................................
+                <span class="project-bracket">[</span> HTML5, CSS3, Java Script,
+                BEM
+                <span class="project-bracket">]</span>
+              </span>
+            </li>
+            <li class="projects-item">
+              <span class="project">
+                <a
+                  href="https://maksym82.github.io/Wonders-of-Ukraine/"
+                  class="project-link"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Wonders of Ukraine</a
                 >
                 ................
                 <span class="project-bracket">[</span> HTML5, CSS3, Java Script,
