Add new project

--- a/index.html
+++ b/index.html
@@ -111,6 +111,22 @@
                 <span class="project-bracket">]</span>
               </span>
             </li>
+            <li class="projects-item">
+              <span class="project">
+                <a
+                  href="https://maksym82.github.io/Yacht-Adventures/"
+                  class="project-link"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Yacht-Adventures
+                  </a
+                >
+                .....................
+                <span class="project-bracket">[</span> HTML5, CSS3, Java Script,
+                BEM
+                <span class="project-bracket">]</span>
+              </span>
+            </li>
           </ol>
         </div>
 
