--- a/index.html
+++ b/index.html
@@ -174,6 +174,18 @@
             </p>
           </div>
           <div>
+            <h4 class="education-name">Prometheus</h4>
+            <h4 class="faculty">Frontend. Базовий курс від Ciklum</h4>
+            <p class="education-period">March 2024 - June 2024<span class="line"></span></p>
+            <a
+              class="certificate"
+              href="https://certs.prometheus.org.ua/downloads/db1e94dd7d87446095534f6c881ea370/Certificate.pdf"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Certificate</a
+            >
+          </div>
+          <div>
             <h4 class="education-name">ITVDN</h4>
             <h4 class="faculty">Layout of pages using Grid</h4>
             <p class="education-period">May 2024<span class="line"></span></p>
