--- a/index.html
+++ b/index.html
@@ -174,6 +174,18 @@
             </p>
           </div>
           <div>
+            <h4 class="education-name">ITVDN</h4>
+            <h4 class="faculty">Java Script Starter</h4>
+            <p class="education-period">August 2024<span class="line"></span></p>
+            <a
+              class="certificate"
+              href="https://testprovider.com/ru/search-certificate/tp13909919"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Certificate</a
+            >
+          </div>
+          <div>
             <h4 class="education-name">Prometheus</h4>
             <h4 class="faculty">Frontend. Базовий курс від Ciklum</h4>
             <p class="education-period">March 2024 - June 2024<span class="line"></span></p>
