--- a/index.html
+++ b/index.html
@@ -143,6 +143,22 @@
                 <span class="project-bracket">]</span>
               </span>
             </li>
+            <li class="projects-item">
+              <span class="project">
+                <a
+                  href="https://maksym82.github.io/Miod-Malina/"
+                  class="project-link"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Miod-Malina
+                  </a
+                >
+                ..................................
+                <span class="project-bracket">[</span> HTML5, CSS3, Java Script,
+                BEM
+                <span class="project-bracket">]</span>
+              </span>
+            </li>
           </ol>
         </div>
 
