--- a/index.html
+++ b/index.html
@@ -159,6 +159,22 @@
                 <span class="project-bracket">]</span>
               </span>
             </li>
+            <li class="projects-item">
+              <span class="project">
+                <a
+                  href="https://maksym82.github.io/Black-Friday/"
+                  class="project-link"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Black-Friday
+                  </a
+                >
+                ..................................
+                <span class="project-bracket">[</span> HTML5, SCSS, Java Script,
+                BEM
+                <span class="project-bracket">]</span>
+              </span>
+            </li>
           </ol>
         </div>
 
