--- a/index.html
+++ b/index.html
@@ -175,6 +175,22 @@
                 <span class="project-bracket">]</span>
               </span>
             </li>
+            <li class="projects-item">
+              <span class="project">
+                <a
+                  href="https://maksym82.github.io/Rhythm/"
+                  class="project-link"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Rhythm
+                  </a
+                >
+                ............................................
+                <span class="project-bracket">[</span> HTML5, SCSS, Java Script,
+                BEM
+                <span class="project-bracket">]</span>
+              </span>
+            </li>
           </ol>
         </div>
 
