--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
           <h3 class="title">Projects</h3>
 
           <ol class="projects-list">
+            <!--Item #1-->
             <li class="projects-item">
               <span class="project">
                 <a
@@ -52,6 +53,7 @@
                 <span class="project-bracket">]</span>
               </span>
             </li>
+            <!--Item #2-->
             <li class="projects-item">
               <span class="project">
                 <a
@@ -66,6 +68,7 @@
                 <span class="project-bracket">]</span>
               </span>
             </li>
+            <!--Item #3-->
             <li class="projects-item">
               <span class="project">
                 <a
@@ -81,6 +84,7 @@
                 <span class="project-bracket">]</span>
               </span>
             </li>
+            <!--Item #4-->
             <li class="projects-item">
               <span class="project">
                 <a
@@ -96,6 +100,7 @@
                 <span class="project-bracket">]</span>
               </span>
             </li>
+            <!--Item #5-->
             <li class="projects-item">
               <span class="project">
                 <a
@@ -111,6 +116,7 @@
                 <span class="project-bracket">]</span>
               </span>
             </li>
+            <!--Item #6-->
             <li class="projects-item">
               <span class="project">
                 <a
@@ -127,6 +133,7 @@
                 <span class="project-bracket">]</span>
               </span>
             </li>
+            <!--Item #7-->
             <li class="projects-item">
               <span class="project">
                 <a
@@ -143,6 +150,7 @@
                 <span class="project-bracket">]</span>
               </span>
             </li>
+            <!--Item #8-->
             <li class="projects-item">
               <span class="project">
                 <a
@@ -159,6 +167,7 @@
                 <span class="project-bracket">]</span>
               </span>
             </li>
+            <!--Item #9-->
             <li class="projects-item">
               <span class="project">
                 <a
@@ -175,6 +184,7 @@
                 <span class="project-bracket">]</span>
               </span>
             </li>
+            <!--Item #10-->
             <li class="projects-item">
               <span class="project">
                 <a
@@ -191,6 +201,7 @@
                 <span class="project-bracket">]</span>
               </span>
             </li>
+            <!--Item #11-->
             <li class="projects-item">
               <span class="project">
                 <a
