--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       <div class="main-content">
         <!--about user-->
         <div class="about">
-          <h2 class="about-position">Front-End Developer</h2>
+          <h2 class="about-position">Junior Front-End Developer</h2>
 
           <h1 class="about-name">Maksym Hromov</h1>
 
           <p class="about-description">
-            I am a Front-End developer. I focus on HTML, CSS, JavaScript and am
+            I am a junior Front-End developer. I focus on HTML, CSS, JavaScript and am
             constantly expanding my knowledge in this area. I have experience
             with HTML, CSS, SASS preprocessor, Java Script and BEM methodology.
           </p>
